convert to... section is ready
convert to... section is ready to connect and with back end but some js is depends on backend

--- a/public/index.html
+++ b/public/index.html
@@ -172,6 +172,196 @@
         </div>
     </section>
 
+    <!-- convert to  section -->
+    <section class="container bg-surface-400 dark:bg-darksurface-500 rounded-3xl p-6 mt-16">
+        <header class="w-full bg-darkBackground dark:bg-background text-darkTextColor dark:text-textColor p-5 rounded-xl mb-6 text-center">فایل های خود را به فرمت های دلخواه تبدیل کنید</header>
+        <!-- to-*... grid -->
+        <div class="flex flex-wrap gap-4 font-ltr mx-auto">
+            <!-- items -->
+            <div class="convert-to-item size-36 bg-surface-300 dark:bg-darksurface-400 rounded flex flex-col items-center justify-center cursor-pointer">
+                <div class="bg-primary p-2 mb-2 rounded">
+                    <svg class="w-8 h-8 text-darkTextColor"><use href="#file-icon"></use></svg>
+                </div>
+                <span class="">To PDF</span>
+            </div>
+            <div class="convert-to-item size-36 bg-surface-300 dark:bg-darksurface-400 rounded flex flex-col items-center justify-center cursor-pointer">
+                <div class="bg-primary p-2 mb-2 rounded">
+                    <svg class="w-8 h-8 text-darkTextColor"><use href="#file-icon"></use></svg>
+                </div>
+                <span class="">To PDF</span>
+            </div>
+            <div class="convert-to-item size-36 bg-surface-300 dark:bg-darksurface-400 rounded flex flex-col items-center justify-center cursor-pointer">
+                <div class="bg-primary p-2 mb-2 rounded">
+                    <svg class="w-8 h-8 text-darkTextColor"><use href="#file-icon"></use></svg>
+                </div>
+                <span class="">To PDF</span>
+            </div>
+            <div class="convert-to-item size-36 bg-surface-300 dark:bg-darksurface-400 rounded flex flex-col items-center justify-center cursor-pointer">
+                <div class="bg-primary p-2 mb-2 rounded">
+                    <svg class="w-8 h-8 text-darkTextColor"><use href="#file-icon"></use></svg>
+                </div>
+                <span class="">To PDF</span>
+            </div>
+            <div class="convert-to-item size-36 bg-surface-300 dark:bg-darksurface-400 rounded flex flex-col items-center justify-center cursor-pointer">
+                <div class="bg-primary p-2 mb-2 rounded">
+                    <svg class="w-8 h-8 text-darkTextColor"><use href="#file-icon"></use></svg>
+                </div>
+                <span class="">To PDF</span>
+            </div>
+            <div class="convert-to-item size-36 bg-surface-300 dark:bg-darksurface-400 rounded flex flex-col items-center justify-center cursor-pointer">
+                <div class="bg-primary p-2 mb-2 rounded">
+                    <svg class="w-8 h-8 text-darkTextColor"><use href="#file-icon"></use></svg>
+                </div>
+                <span class="">To PDF</span>
+            </div>
+            <div class="convert-to-item size-36 bg-surface-300 dark:bg-darksurface-400 rounded flex flex-col items-center justify-center cursor-pointer">
+                <div class="bg-primary p-2 mb-2 rounded">
+                    <svg class="w-8 h-8 text-darkTextColor"><use href="#file-icon"></use></svg>
+                </div>
+                <span class="">To PDF</span>
+            </div>
+            <div class="convert-to-item size-36 bg-surface-300 dark:bg-darksurface-400 rounded flex flex-col items-center justify-center cursor-pointer">
+                <div class="bg-primary p-2 mb-2 rounded">
+                    <svg class="w-8 h-8 text-darkTextColor"><use href="#file-icon"></use></svg>
+                </div>
+                <span class="">To PDF</span>
+            </div>
+            <div class="convert-to-item size-36 bg-surface-300 dark:bg-darksurface-400 rounded flex flex-col items-center justify-center cursor-pointer">
+                <div class="bg-primary p-2 mb-2 rounded">
+                    <svg class="w-8 h-8 text-darkTextColor"><use href="#file-icon"></use></svg>
+                </div>
+                <span class="">To PDF</span>
+            </div>
+            <div class="convert-to-item size-36 bg-surface-300 dark:bg-darksurface-400 rounded flex flex-col items-center justify-center cursor-pointer">
+                <div class="bg-primary p-2 mb-2 rounded">
+                    <svg class="w-8 h-8 text-darkTextColor"><use href="#file-icon"></use></svg>
+                </div>
+                <span class="">To PDF</span>
+            </div>
+            <div class="convert-to-item size-36 bg-surface-300 dark:bg-darksurface-400 rounded flex flex-col items-center justify-center cursor-pointer">
+                <div class="bg-primary p-2 mb-2 rounded">
+                    <svg class="w-8 h-8 text-darkTextColor"><use href="#file-icon"></use></svg>
+                </div>
+                <span class="">To PDF</span>
+            </div>
+        </div>
+        <br>
+        <!-- *-to-{} grid -->
+        <div class="flex flex-wrap gap-4 font-ltr mx-auto">
+            <!-- items -->
+            <div class="convert-to-item size-36 bg-surface-300 dark:bg-darksurface-400 rounded flex flex-col items-center justify-center cursor-pointer">
+                <div class="bg-orange-500 p-2 mb-2 rounded">
+                    <svg class="w-8 h-8 text-darkTextColor"><use href="#file-icon"></use></svg>
+                </div>
+                <span class="">WORD To PDF</span>
+            </div>
+            <div class="convert-to-item size-36 bg-surface-300 dark:bg-darksurface-400 rounded flex flex-col items-center justify-center cursor-pointer">
+                <div class="bg-orange-500 p-2 mb-2 rounded">
+                    <svg class="w-8 h-8 text-darkTextColor"><use href="#file-icon"></use></svg>
+                </div>
+                <span class="">WORD To PDF</span>
+            </div>
+            <div class="convert-to-item size-36 bg-surface-300 dark:bg-darksurface-400 rounded flex flex-col items-center justify-center cursor-pointer">
+                <div class="bg-orange-500 p-2 mb-2 rounded">
+                    <svg class="w-8 h-8 text-darkTextColor"><use href="#file-icon"></use></svg>
+                </div>
+                <span class="">WORD To PDF</span>
+            </div>
+            <div class="convert-to-item size-36 bg-surface-300 dark:bg-darksurface-400 rounded flex flex-col items-center justify-center cursor-pointer">
+                <div class="bg-orange-500 p-2 mb-2 rounded">
+                    <svg class="w-8 h-8 text-darkTextColor"><use href="#file-icon"></use></svg>
+                </div>
+                <span class="">WORD To PDF</span>
+            </div>
+            <div class="convert-to-item size-36 bg-surface-300 dark:bg-darksurface-400 rounded flex flex-col items-center justify-center cursor-pointer">
+                <div class="bg-orange-500 p-2 mb-2 rounded">
+                    <svg class="w-8 h-8 text-darkTextColor"><use href="#file-icon"></use></svg>
+                </div>
+                <span class="">WORD To PDF</span>
+            </div>
+            <div class="convert-to-item size-36 bg-surface-300 dark:bg-darksurface-400 rounded flex flex-col items-center justify-center cursor-pointer">
+                <div class="bg-orange-500 p-2 mb-2 rounded">
+                    <svg class="w-8 h-8 text-darkTextColor"><use href="#file-icon"></use></svg>
+                </div>
+                <span class="">WORD To PDF</span>
+            </div>
+            <div class="convert-to-item size-36 bg-surface-300 dark:bg-darksurface-400 rounded flex flex-col items-center justify-center cursor-pointer">
+                <div class="bg-orange-500 p-2 mb-2 rounded">
+                    <svg class="w-8 h-8 text-darkTextColor"><use href="#file-icon"></use></svg>
+                </div>
+                <span class="">WORD To PDF</span>
+            </div>
+            <div class="convert-to-item size-36 bg-surface-300 dark:bg-darksurface-400 rounded flex flex-col items-center justify-center cursor-pointer">
+                <div class="bg-orange-500 p-2 mb-2 rounded">
+                    <svg class="w-8 h-8 text-darkTextColor"><use href="#file-icon"></use></svg>
+                </div>
+                <span class="">WORD To PDF</span>
+            </div>
+            <div class="convert-to-item size-36 bg-surface-300 dark:bg-darksurface-400 rounded flex flex-col items-center justify-center cursor-pointer">
+                <div class="bg-orange-500 p-2 mb-2 rounded">
+                    <svg class="w-8 h-8 text-darkTextColor"><use href="#file-icon"></use></svg>
+                </div>
+                <span class="">WORD To PDF</span>
+            </div>
+            <div class="convert-to-item size-36 bg-surface-300 dark:bg-darksurface-400 rounded flex flex-col items-center justify-center cursor-pointer">
+                <div class="bg-orange-500 p-2 mb-2 rounded">
+                    <svg class="w-8 h-8 text-darkTextColor"><use href="#file-icon"></use></svg>
+                </div>
+                <span class="">WORD To PDF</span>
+            </div>
+            <div class="convert-to-item size-36 bg-surface-300 dark:bg-darksurface-400 rounded flex flex-col items-center justify-center cursor-pointer">
+                <div class="bg-orange-500 p-2 mb-2 rounded">
+                    <svg class="w-8 h-8 text-darkTextColor"><use href="#file-icon"></use></svg>
+                </div>
+                <span class="">WORD To PDF</span>
+            </div>
+            <div class="convert-to-item size-36 bg-surface-300 dark:bg-darksurface-400 rounded flex flex-col items-center justify-center cursor-pointer">
+                <div class="bg-orange-500 p-2 mb-2 rounded">
+                    <svg class="w-8 h-8 text-darkTextColor"><use href="#file-icon"></use></svg>
+                </div>
+                <span class="">WORD To PDF</span>
+            </div>
+            <div class="convert-to-item size-36 bg-surface-300 dark:bg-darksurface-400 rounded flex flex-col items-center justify-center cursor-pointer">
+                <div class="bg-orange-500 p-2 mb-2 rounded">
+                    <svg class="w-8 h-8 text-darkTextColor"><use href="#file-icon"></use></svg>
+                </div>
+                <span class="">WORD To PDF</span>
+            </div>
+            <div class="convert-to-item size-36 bg-surface-300 dark:bg-darksurface-400 rounded flex flex-col items-center justify-center cursor-pointer">
+                <div class="bg-orange-500 p-2 mb-2 rounded">
+                    <svg class="w-8 h-8 text-darkTextColor"><use href="#file-icon"></use></svg>
+                </div>
+                <span class="">WORD To PDF</span>
+            </div>
+            <div class="convert-to-item size-36 bg-surface-300 dark:bg-darksurface-400 rounded flex flex-col items-center justify-center cursor-pointer">
+                <div class="bg-orange-500 p-2 mb-2 rounded">
+                    <svg class="w-8 h-8 text-darkTextColor"><use href="#file-icon"></use></svg>
+                </div>
+                <span class="">WORD To PDF</span>
+            </div>
+            <div class="convert-to-item size-36 bg-surface-300 dark:bg-darksurface-400 rounded flex flex-col items-center justify-center cursor-pointer">
+                <div class="bg-orange-500 p-2 mb-2 rounded">
+                    <svg class="w-8 h-8 text-darkTextColor"><use href="#file-icon"></use></svg>
+                </div>
+                <span class="">WORD To PDF</span>
+            </div>
+            <div class="convert-to-item size-36 bg-surface-300 dark:bg-darksurface-400 rounded flex flex-col items-center justify-center cursor-pointer">
+                <div class="bg-orange-500 p-2 mb-2 rounded">
+                    <svg class="w-8 h-8 text-darkTextColor"><use href="#file-icon"></use></svg>
+                </div>
+                <span class="">WORD To PDF</span>
+            </div>
+            <div class="convert-to-item size-36 bg-surface-300 dark:bg-darksurface-400 rounded flex flex-col items-center justify-center cursor-pointer">
+                <div class="bg-orange-500 p-2 mb-2 rounded">
+                    <svg class="w-8 h-8 text-darkTextColor"><use href="#file-icon"></use></svg>
+                </div>
+                <span class="">WORD To PDF</span>
+            </div>
+            
+        </div>
+
+    </section>
+
     <!-- cards section -->
     <section class="container mt-16">
         <!-- grid container -->
